syntax = "proto3";

option java_package = "com.swallow.cracker";
option java_multiple_files = true;

message UserPreferences {
  // filter for showing / hiding completed tasks
  bool on_boarding_shown = 1;
  string auth_token = 2;
  string auth_refresh_token = 3;
  string current_account_id = 4;
}